	* Follow-up to bug #15430: htmlArea RTE: Text not editable after pasting with server-based cleaning
	* Fixed bug #15797: htmlArea RTE: Problem in Firefox inserting non-breaking space with Insert Special Character dialogue
	* Fixed bug #15749: htmlArea RTE: Firefox shows &amp; in external links with query string
	* Fixed bug #15512: htmlArea RTE: Initialization in flexforms broken with TYPO3 4.4

2010-09-25  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15748: BE input validation "time" rejects 0:00 and 24:00 (Thanks to Lars Peipmann)

2010-09-24  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15792: List view page browser: navigating to last page doesn't work
	* Fixed bug #15373: Page browser single table list view: Entering page number doesn't work
	* Fixed bug #15485: username in sys_lockedrecords to short (Thanks to Peter Russ)
	* Fixed bug #15462: Wrong order of quote and escape in LIKE DB clause (Thanks to Marcus Krause)
	* Fixed bug #15787: Misleading security message in extension manager (Thanks to Marcus Krause)
	* Fixed bug #15778: "Close window and check dependencies" doesn't work anymore (Thanks to Søren Malling)

2010-09-24  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #15653: Only show upload comments that are newer than installed version in update function of EM

2010-09-24  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to 15691: Javascript Error in taskcenter

2010-09-23  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #15770: Module menu and content area are empty if certain extensions are installed (e.g. llxmltranslate)

2010-09-22  Ernesto Baschny  <ernesto@typo3.org>

	* Release of TYPO3 4.5.0alpha2

2010-09-22  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #15732: Backend textarea fields should also be flexible in height, even if text is just a continuous text (Thanks to Sebastian Müller)

2010-09-22  Steffen Kamper  <steffen@typo3.org>
