@@ -5,6 +5,7 @@
 	* Fixed bug #15797: htmlArea RTE: Problem in Firefox inserting non-breaking space with Insert Special Character dialogue
 	* Fixed bug #15749: htmlArea RTE: Firefox shows &amp; in external links with query string
 	* Fixed bug #15512: htmlArea RTE: Initialization in flexforms broken with TYPO3 4.4
+	* Follow-up to bug #15622: t3lib_TCEforms_inline registers superfluous nested level when renderFieldsOnly is set
 
 2010-09-12  Stanislas Rolland  <typo3@sjbr.ca>
 
